--- a/intrest_calculator.html
+++ b/intrest_calculator.html
@@ -40,7 +40,7 @@ document.getElementById("result").innerHTML= percent+" of "+a1 +" = "+a2 +"<br> 
 
         <input type="text" placeholder="Enter the principle amount" id="a" required/> of X% = <input type="text" placeholder="Enter the intrest amount" id="b" required/>
         <br>
-        <input type="text" placeholder="Enter the principle amount for intrest amount" id="c" required/>
+        <input type="text" placeholder="Enter the principle amount for intrest percent calculated from above" id="c" required/>
         <br>
         <input type="button" value="submit" onclick="calc()"/>
 
